# sandbox

./: .eslintignore  .gitattributes  .gitignore  .npmrc  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.githooks/: commit-msg  pre-commit
apps/admin-panel/backend/: package.json  tsconfig.json
apps/admin-panel/backend/src/: config.ts  index.ts  postgres.ts  queries.ts  router.ts  server.ts
apps/admin-panel/frontend/: package.json  vite.config.ts
apps/admin-panel/frontend/src/: App.tsx  Page.tsx  TableView.tsx  client.ts  index.css  index.tsx  trpc.ts
apps/game-backend/: Cargo.toml  package.json
apps/game-backend/src/: main.rs  websocket.rs
apps/game-frontend/: package.json  pnpm-lock.yaml
apps/game-frontend/src/: index.tsx
apps/game-postgres/: docker-compose.yml  package.json
apps/game-postgres-entities/: .env.example  Cargo.toml  package.json
apps/game-postgres-entities/src/: lib.rs  prelude.rs  user.rs  user_item.rs
apps/game-postgres-migrations/: .env.example  package.json  pnpm-lock.yaml
apps/game-postgres-migrations/src/: migrate.ts
apps/game-postgres-migrations/src/migrations/: 0001_create-sample-tables.sql  0002_add_relations.sql
apps/game/backend/: Cargo.toml
apps/game/backend/src/: main.rs
apps/game/backend/src/queries/: users.rs
apps/game/frontend/: package.json
apps/game/frontend-mobile/: .gitignore  nativescript.config.ts  package.json  tailwind.config.js  tsconfig.json
apps/game/frontend-mobile/app/: main-page.ts  main-page.xml
apps/game/frontend-mobile/src/: App.tsx  Root.tsx  app.ts  index.tsx  main-page.ts  main-page.xml  main-view-model.ts
apps/game/frontend-web/: package.json  tsconfig.json
apps/game/frontend-web/src/: App.tsx  index.tsx
apps/game/migrations/: package.json  tsconfig.json
apps/game/postgres/: package.json
configs/eslint-config/: package.json
configs/tsconfig/: tsconfig.json
deployment/: cdk8s.yaml  index.ts  package.json
infra/: cdk.json  package.json
infra/src/: index.ts  infra-stack.ts
libs/eslint-config/: index.js
libs/frontend-components/: package.json
libs/game/frontend-components/: package.json
libs/prettier-config/: index.js  package.json
scripts/: ci.ts  verify-package-scripts-exist.ts
(+16 files in other folders)
