[package]
name = "game-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
game-postgres-entities = { path = "../game-postgres-entities" }
tokio = { version = "1.28.0", features = ["full"] }
axum = { version = "0.6.18", features = ["ws"] }
anyhow = "1.0.71"
dotenvy = "0.15.7"
sea-orm = { version = "0.11.3", features = ["runtime-tokio-native-tls", "sqlx-postgres"] }
serde = "1.0.162"
serde_json = "1.0.96"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"]}
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }

